# afterlight

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/observatory/: CMakeLists.txt  main.cpp  shader_paths.hpp.in
cmake/: AfterlightOptions.cmake  AfterlightSanitizers.cmake  AfterlightTarget.cmake  AfterlightWarnings.cmake
docs/: architecture.md  development.md
docs/adr/: 0010-device-local-mesh-uploads.md  0011-per-swapchain-image-depth-targets.md  0012-procedural-material-texture.md  0013-explicit-texture-coordinates.md  0014-persistent-material-parameter-block.md
docs/project-state/: CURRENT_STATE.md  DECISIONS.md  NEXT_ACTION.md  P10_DEVICE_LOCAL_MESH_UPLOADS.md  P11_PER_IMAGE_DEPTH_TARGETS.md  P12_PROCEDURAL_MATERIAL_TEXTURE.md  P13_EXPLICIT_TEXTURE_COORDINATES.md  P14_PERSISTENT_MATERIAL_PARAMETER_BLOCK.md  SESSION_HANDOFF.md
engine/core/: CMakeLists.txt
engine/core/include/afterlight/core/: application_lifecycle.hpp  build_info.hpp
engine/core/src/: application_lifecycle.cpp  build_info.cpp
engine/graphics/vulkan/: CMakeLists.txt
engine/graphics/vulkan/include/afterlight/graphics/vulkan/: barrier.hpp  depth_target.hpp  device_selection.hpp  gpu_mesh.hpp  material_texture.hpp  mesh_pipeline.hpp  mesh_upload.hpp  scene_uniforms.hpp  swapchain.hpp  triangle_pipeline.hpp  vulkan_context.hpp
engine/graphics/vulkan/src/: barrier.cpp  depth_target.cpp  device_selection.cpp  gpu_mesh.cpp  material_texture.cpp  mesh_pipeline.cpp  mesh_upload.cpp  scene_uniforms.cpp  swapchain.cpp  triangle_pipeline.cpp  vulkan_context.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/afterlight/platform/: platform.hpp  vulkan_surface.hpp
engine/platform/src/: platform.cpp  vulkan_surface.cpp
engine/rhi/: CMakeLists.txt
engine/rhi/include/afterlight/rhi/: frame_scheduler.hpp  resource.hpp  resource_state_tracker.hpp
engine/rhi/src/: frame_scheduler.cpp  resource.cpp  resource_state_tracker.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/afterlight/scene/: camera.hpp  mesh.hpp
engine/scene/src/: camera.cpp  mesh.cpp
scripts/: bootstrap-vcpkg.ps1  bootstrap-vcpkg.sh  check-source-hygiene.py  install-linux-prerequisites.sh  validate.sh
shaders/: CMakeLists.txt  mesh.hlsl  triangle.hlsl
tests/: CMakeLists.txt
tests/graphics/: CMakeLists.txt  barrier_translation_test.cpp  depth_format_test.cpp  depth_target_policy_test.cpp  device_selection_test.cpp  material_parameters_test.cpp  material_texture_test.cpp  mesh_upload_test.cpp  scene_uniforms_test.cpp  shader_binary_test.cpp  swapchain_policy_test.cpp
tests/integration/: CMakeLists.txt  platform_smoke_test.cpp
tests/rhi/: CMakeLists.txt  frame_scheduler_test.cpp  resource_registry_test.cpp
tests/scene/: CMakeLists.txt  camera_test.cpp  lighting_contract_test.cpp  mesh_test.cpp  texture_coordinate_test.cpp
tests/unit/: CMakeLists.txt  application_lifecycle_test.cpp  build_info_test.cpp  window_config_test.cpp
